--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "build": "webpack -d"
   },
-  "author": "Beth Johnson",
+  "author": "Lawrence Chou",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
